# spooftunnel

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-release.yml  rust.yml
config/: client.toml  server.toml
scripts/: spoof-manager.sh
src/: app.rs  check.rs  config.rs  lib.rs  logging.rs  mux_fec.rs  packet.rs  port_forward.rs  quic.rs  raw_socket.rs  socks5.rs  tun.rs  tun_bridge.rs  tuning.rs  tunnel.rs  xor.rs
